# advent-of-code-2024-haskell

./: .gitignore  README.md  aoc-haskell24.cabal
.github/workflows/: haskell.yml
app/: Day01Pt1.hs  Day01Pt2.hs  Day02Pt1.hs  Day02Pt2.hs  Day03Pt1.hs  Day03Pt2.hs  Day04Pt1.hs  Day04Pt2.hs  Day05Pt1.hs  Day05Pt2.hs  Day06Pt1.hs  Day06Pt2.hs  Day07Pt1.hs  Day07Pt2.hs  Day08Pt1.hs  Day08Pt2.hs  Day09Pt1.hs  Day09Pt2.hs  Day10.hs  Day10Pt1.hs  Day10Pt2.hs  Day11Pt1.hs  Main.hs
