cabal-version:      3.0
name:               aoc-haskell24
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Karim Houari
maintainer:         khouari1@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc-haskell24
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , split
                    , heaps
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Day01Pt1
        Day01Pt2
        Day02Pt1
        Day02Pt2
        Day03Pt1
        Day03Pt2
        Day04Pt1
        Day04Pt2
        Day05Pt1
        Day05Pt2
        Day06Pt1
        Day06Pt2
        Day07Pt1
        Day07Pt2
        Day08Pt1
        Day08Pt2
        Day09Pt1
        Day09Pt2
        Day10Pt1
